gc.md: foobar